document/yaml/p-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-demo
  namespace: p-demo
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: access
    - namespaceSelector:
        matchLabels:
          name: p-demo1
    - ipBlock:
        cidr: 10.19.139.0/24
