document/yaml/p-demo1-namespace-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-egress
  namespace: p-demo1
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: p-demo1
  - to:
    - namespaceSelector:
        matchLabels:
          app: access1
