document/yaml/p-demo1-namespace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-ingress
  namespace: p-demo1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: p-demo1
  - from:
    - namespaceSelector:
        matchLabels:
          app: access
